# mcp-server-for-revit-python

./: main.py  pyproject.toml
revit_mcp/: colors.py  placement.py  utils.py  views.py
tests/: conftest.py
tests/integration/: conftest.py  test_code_execution.py  test_document_lifecycle.py  test_families.py  test_status.py  test_views.py
tests/unit/: test_document_tools.py  test_find_installations.py  test_format_response.py  test_launch_helpers.py  test_tool_wrappers.py  test_wait_for_revit.py
tools/: code_execution_tools.py  colors_tools.py  document_tools.py  view_tools.py
